Added image container

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <div id="main-container">
         <div class="left-container">
+            <div class="img-container">
+                <img src="#image" alt="Green Plant">
+            </div>
             <div class="upper-content"></div>
             <div class="bottom-content">
                 <a href="#photographer"></a>
