Updated left and right containers to id; Added image links and url links

--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
 </head>
 <body>
     <div id="main-container">
-        <div class="left-container">
+        <div id="left-container">
             <div class="img-container">
-                <img src="#image" alt="Green Plant">
+                <img src="./assets/halie-west-unsplash.jpg" alt="Green Plant" class="plant-img">
             </div>
-            <div class="upper-content"></div>
+            <div class="upper-content">
+                <img src="./assets/odin-lined.png" alt="Odin Project Logo" class="odin-logo">
+            </div>
             <div class="bottom-content">
-                <a href="#photographer"></a>
-                <a href="#website"></a>
+                <a href="https://unsplash.com/@haliewestphoto"></a>
+                <a href="https://unsplash.com/"></a>
             </div>
         </div>
-        <div class="right-container">
+        <div id="right-container">
             <div class="upper-content">
                 <p></p>
             </div>
