Left container is completed

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
     <div id="main-container">
         <div id="left-container">
             <div class="img-container">
-                <img src="./assets/halie-west-unsplash.jpg" alt="Green Plant" class="plant-img">
+                <img src="./assets/halie-west-unsplash.avif" alt="Green Plant" class="plant-img">
             </div>
             <div class="upper-content">
                 <img src="./assets/odin-lined.png" alt="Odin Project Logo" class="odin-logo">
+                <p class="odin-txt">ODIN</p>
             </div>
             <div class="bottom-content">
-                <a href="https://unsplash.com/@haliewestphoto"></a>
-                <a href="https://unsplash.com/"></a>
+                Photo by
+                <a href="https://unsplash.com/@haliewestphoto"">Halie West</a>
+                on
+                <a href="https://unsplash.com/">Unsplash</a>
             </div>
         </div>
         <div id="right-container">
