--- a/index.html
+++ b/index.html
@@ -25,19 +25,58 @@
         </div>
         <div id="right-container">
             <div class="upper-content">
-                <p></p>
+                <p marketing-txt>
+                    This is not a real online service! You know you need something like this in
+                    your life to help you realize your deepest dreams. Sign up <em>now</em> 
+                    to get started.<br><br>You <em>know</em> you want to.
+                </p>
             </div>
             <div class="mid-content">
-                <p></p>
-                <div class="form-container"></div>
+                <p class="form-txt">Let's do this!</p>
+                <div class="form-container">
+                    <form>
+                        <div class="form-row">
+                            <label for="first-name">FIRST NAME</label>
+                            <br>
+                            <input type="text" id="first-name">
+                        </div>
+                        <div class="form-row">
+                            <label for="last-name">LAST NAME</label>
+                            <br>
+                            <input type="text" id="last-name">
+                        </div>
+                        <div class="form-row">
+                            <label for="email">EMAIL</label>
+                            <br>
+                            <input type="email" id="email">
+                        </div>
+                        <div class="form-row">
+                            <label for="phone-number">PHONE NUMBER</label>
+                            <br>
+                            <input type="tel" id="phone-number">
+                        </div>
+                        <div class="form-row">
+                            <label for="password">PASSWORD</label>
+                            <br>
+                            <input type="password" id="password">
+                        </div>
+                        <div class="form-row">
+                            <label for="confirm-password">CONFIRM PASSWORD</label>
+                            <br>
+                            <input type="password" id="confirm-password">
+                        </div>
+                    </form>
+                </div>
             </div>
             <div class="bottom-content">
                 <div class="create-btn">
                     <button type="submit">Create Account</button>
                 </div>
                 <div class="login">
-                    <p></p>
-                    <a href="#login"></a>
+                    <p class="login-txt">
+                        Already have an account?
+                        <a href="#login">Log in</a>
+                    </p>
                 </div>
             </div>
         </div>
